# ProvenanceBot

./: .eslintrc.cjs  .gitignore  .prettierignore  .vercelignore  CONTRIBUTING.md  README.md  SUBMISSION.md  next.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  render.yaml  tsconfig.base.json  vercel.json
.github/workflows/: cd.yml  ci.yml
agents/: .env.example  package.json  railway.toml  tsconfig.json
agents/scripts/: export-pilot-data.mjs
agents/src/: index.ts
agents/src/agents/: notary.ts  retriever.ts  synthesizer.test.ts  synthesizer.ts
agents/src/bindings/: README.md
agents/src/config/: env.ts
agents/src/lib/: archive.ts  contract-id.ts  fetch.ts  hash.test.ts  hash.ts  soroban.ts  store.ts
agents/src/orchestration/: pipeline.integration.test.ts  pipeline.test.ts  pipeline.ts
agents/src/routes/: admin.ts  feedback.ts  health.ts  query.ts  verify.ts
agents/src/search/: index.ts  stub-knowledge.ts  stub-provider.ts  types.ts
contracts/: Cargo.toml  README.md  deploy.sh  testnet-contract-id.txt
contracts/provenance/: Cargo.toml
contracts/provenance/src/: lib.rs
contracts/provenance_log/: Cargo.toml
contracts/provenance_log/src/: lib.rs
docs/: ANALYTICS.md  DEMO_SCRIPT.md  PROVENANCE.md  SMART_CONTRACT_INTEGRATION.md  architecture.md
frontend/: .env.example  next.config.js  package.json  sentry.server.config.ts  tailwind.config.js  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AnalyticsProvider.tsx  FeedbackWidget.tsx  Header.tsx  ProgressSteps.tsx  (+5 more)
(+20 files in other folders)
